--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #Wed Nov 11 20:55:11 EET 2015
-db.password=flatronl17
+db.password=password
 db.host=jdbc\:mysql\://localhost/YourVocabulary
 db.driver=com.mysql.jdbc.Driver
 db.login=root
